Fix PyLong <-> GPid conversion on 64bit Windows

GPid on Windows is a pointer and not int, and pointers don't fit long
on 64bit so use PyLong_AsVoidPtr/PyLong_FromVoidPtr there instead.

https://bugzilla.gnome.org/show_bug.cgi?id=780591